# gamef

./: .gitignore  CMakeLists.txt  README.md  a.sh  bullet.cxx  bullet.hxx  bullets.cxx  bullets.hxx  config_game.json  enemy.cxx  enemy.hxx  engine.cxx  engine.hxx  game.cxx  game.hxx  game_reload.cxx  ientity.hxx  main.cxx  player.cxx  player.hxx
android-project/: local.properties
android-project/app/: build.gradle
android-project/app/src/main/: AndroidManifest.xml
android-project/app/src/main/assets/: config_game.json  wave_list.json
android-project/app/src/main/assets/shader/: texture_fragment.shader  triangle_vertex.shader
android-project/app/src/main/assets/shader/mac/: triangle_fragment.shader  triangle_vertex.shader
android-project/app/src/main/java/org/home/grp/: SpaceInvaders.java
assets/: config_list.json  wave_list.json
engine/: CMakeLists.txt
engine/include/: engine.hxx
engine/src/: engine.cxx
glad/: glad.c  glad.h
imgui-src/: imgui_impl_opengl3.cpp  imgui_impl_sdl3.cpp
include/: bonus.hxx  bullet.hxx  enemy.hxx  game.hxx  ientity.hxx  player.hxx
shader/: texture_vertex.shader
src/: bonus.cxx  bullet.cxx  enemy.cxx  game.cxx  main.cxx  player.cxx
